fix(css): align with figma

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ p {
 }
 
 .name-ctn {
-  display: flex;
+  display: inline-flex;
 }
 
 .name {
